# luajit-rocks

./: CMakeLists.txt  README.md
luajit-2.1-beta2/src/: luajit.c
